--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="@string/tv_artist_name"
+        android:text="Harry Styles"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_song_title"
         app:layout_constraintHorizontal_bias="0.509"
@@ -23,8 +23,8 @@
         android:id="@+id/tv_song_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="128dp"
-        android:text="@string/tv_song_title"
+        android:layout_marginTop="90dp"
+        android:text="Falling"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="@string/tv_album_name"
+        android:text="Fine Line"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_artist_name"
         app:layout_constraintStart_toStartOf="@+id/tv_artist_name"
@@ -47,12 +47,12 @@
         android:id="@+id/btn_save_to_library"
         android:layout_width="120dp"
         android:layout_height="70dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/btn_save_to_library"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_album_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_album_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_album_name"
-        tools:text="@string/btn_save_to_library" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_listen_on_spotify"
+        app:layout_constraintStart_toStartOf="@+id/btn_listen_on_spotify"
+        app:layout_constraintTop_toBottomOf="@+id/btn_listen_on_spotify" />
 
     <Button
         android:id="@+id/btn_add_to_favourites"
@@ -60,7 +60,17 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
+        android:text="@string/btn_add_to_favourites"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="@string/btn_add_to_favourites" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn_listen_on_spotify"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="60dp"
+        android:text="@string/btn_listen_on_spotify"
+        app:layout_constraintEnd_toEndOf="@+id/tv_album_name"
+        app:layout_constraintStart_toStartOf="@+id/tv_album_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_album_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
