--- a/app/src/main/res/layout/activity_recently_played.xml
+++ b/app/src/main/res/layout/activity_recently_played.xml
@@ -8,12 +8,14 @@
 
     <TextView
         android:id="@+id/tv_recent_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="163dp"
+        android:layout_height="94dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:text="Recently Played"
         android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_recently_played"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +23,7 @@
         android:id="@+id/rv_recently_played"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,8 +33,8 @@
 
     <Button
         android:id="@+id/btn_view_favourite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="144dp"
+        android:layout_height="62dp"
         android:layout_marginEnd="16dp"
         android:text="@string/btn_view_favourite"
         app:layout_constraintBottom_toBottomOf="@+id/tv_recent_title"
