--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Harry Styles"
+        android:text="@string/tv_artist_name"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_song_title"
         app:layout_constraintHorizontal_bias="0.509"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
-        android:text="Falling"
+        android:text="@string/tv_song_title"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Fine Line"
+        android:text="@string/tv_album_name"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_artist_name"
         app:layout_constraintStart_toStartOf="@+id/tv_artist_name"
