--- a/app/src/main/res/layout/activity_recently_played.xml
+++ b/app/src/main/res/layout/activity_recently_played.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Recently Played"
+        android:text="@string/tv_recent_title"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_recently_played"
         app:layout_constraintStart_toStartOf="parent"
