--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -12,17 +12,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Recommendations Based On"
+        android:text="@string/tv_recommendatons_title"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_song_title_reccomend"
+        android:id="@+id/tv_song_title_recommend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
-        android:text="Someone You Loved"
+        android:text="@string/tv_song_title_recommend"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/tv_recommendations_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_recommendations_title"
