--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -55,16 +55,6 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_listen_on_youtube" />
 
     <Button
-        android:id="@+id/btn_add_to_favourites"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/btn_add_to_favourites"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
         android:id="@+id/btn_listen_on_youtube"
         android:layout_width="150dp"
         android:layout_height="70dp"
@@ -73,4 +63,14 @@
         app:layout_constraintEnd_toEndOf="@+id/tv_album_name"
         app:layout_constraintStart_toStartOf="@+id/tv_album_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_album_name" />
+
+    <Button
+        android:id="@+id/btn_back_to_rp"
+        android:layout_width="180dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="32dp"
+        android:text="@string/btn_back_to_rp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
