--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -23,25 +23,13 @@
         android:id="@+id/tv_song_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="16dp"
         android:text="@string/tv_song_title"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Falling" />
-
-    <TextView
-        android:id="@+id/tv_album_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="@string/tv_album_name"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_artist_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_artist_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_artist_name"
-        tools:text="Fine Line" />
 
     <Button
         android:id="@+id/btn_share_recommendation"
@@ -58,19 +46,10 @@
         android:id="@+id/btn_listen_on_youtube"
         android:layout_width="150dp"
         android:layout_height="70dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="32dp"
         android:text="@string/btn_listen_on_youtube"
-        app:layout_constraintEnd_toEndOf="@+id/tv_album_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_album_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_album_name" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_artist_name"
+        app:layout_constraintStart_toStartOf="@+id/tv_artist_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_artist_name" />
 
-    <Button
-        android:id="@+id/btn_back_to_rp"
-        android:layout_width="180dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/btn_back_to_rp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
