--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btn_login"
         android:layout_width="130dp"
         android:layout_height="90dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="24dp"
         android:text="@string/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,9 +20,10 @@
         android:id="@+id/iv_legend"
         android:layout_width="190dp"
         android:layout_height="188dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/iv_legend"
         app:layout_constraintEnd_toEndOf="@+id/btn_login"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="@+id/btn_login"
         app:layout_constraintTop_toBottomOf="@+id/btn_login"
         app:srcCompat="@drawable/harry" />
