api and code improvements

--- a/app/src/main/res/layout/activity_recommend_list_item.xml
+++ b/app/src/main/res/layout/activity_recommend_list_item.xml
@@ -7,32 +7,25 @@
     tools:context=".RecommendListItem">
 
     <TextView
-        android:id="@+id/tv_r_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/tv_r_number"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="1." />
-
-    <TextView
         android:id="@+id/tv_r_song_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/tv_r_song_title"
-        app:layout_constraintStart_toEndOf="@+id/tv_r_number"
-        app:layout_constraintTop_toTopOf="@+id/tv_r_number"
+        android:textIsSelectable="false"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Falling" />
 
     <TextView
         android:id="@+id/tv_r_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/tv_r_artist"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_r_song_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_r_song_title"
         tools:text="Harry Styles" />
@@ -43,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:text="@string/btn_options"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_r_artist"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_r_song_title" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
