--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -6,50 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".ActionActivity">
 
-    <TextView
-        android:id="@+id/tv_artist_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="@string/tv_artist_name"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_song_title"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="@+id/tv_song_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_song_title"
-        tools:text="Harry Styles" />
-
-    <TextView
-        android:id="@+id/tv_song_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/tv_song_title"
-        android:textSize="36sp"
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Falling" />
+        app:layout_constraintVertical_bias="0.0">
 
-    <Button
-        android:id="@+id/btn_share_recommendation"
-        android:layout_width="180dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/btn_share_recommendation"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/btn_listen_on_youtube"
-        app:layout_constraintStart_toStartOf="@+id/btn_listen_on_youtube"
-        app:layout_constraintTop_toBottomOf="@+id/btn_listen_on_youtube" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="731dp"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_listen_on_youtube"
-        android:layout_width="150dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/btn_listen_on_youtube"
-        app:layout_constraintEnd_toEndOf="@+id/tv_artist_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_artist_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_artist_name" />
+            <TextView
+                android:id="@+id/tv_song_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_song_title"
+                android:textAlignment="center"
+                android:textSize="36sp"
+                tools:text="Falling" />
+
+            <TextView
+                android:id="@+id/tv_artist_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_artist_name"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                tools:text="Harry Styles" />
+
+            <Button
+                android:id="@+id/btn_listen_on_youtube"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:text="@string/btn_listen_on_youtube" />
+
+            <Button
+                android:id="@+id/btn_share_recommendation"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:text="@string/btn_share_recommendation"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
