--- a/app/src/main/res/layout/activity_recently_played_list_item.xml
+++ b/app/src/main/res/layout/activity_recently_played_list_item.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/tv_rp_title"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
@@ -20,7 +20,7 @@
 
     <TextView
         android:id="@+id/tv_rp_artist"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/tv_rp_artist"
