--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/tv_song_title_recommend"
-        android:layout_width="wrap_content"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:text="@string/tv_song_title_recommend"
