--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -39,7 +39,7 @@
             <TextView
                 android:id="@+id/tv_artist_name"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="wrap_content"
                 android:text="@string/tv_artist_name"
                 android:textAlignment="center"
                 android:textSize="30sp"
