--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -7,63 +7,71 @@
     tools:context=".ActionActivity">
 
     <ScrollView
-        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="731dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_song_title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
                 android:text="@string/tv_song_title"
                 android:textAlignment="center"
                 android:textSize="36sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Falling" />
 
             <TextView
                 android:id="@+id/tv_artist_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="@string/tv_artist_name"
                 android:textAlignment="center"
                 android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="@+id/tv_song_title"
+                app:layout_constraintStart_toStartOf="@+id/tv_song_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_song_title"
                 tools:text="Harry Styles" />
 
             <Button
-                android:id="@+id/btn_listen_on_youtube"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:text="@string/btn_listen_on_youtube" />
-
-            <Button
                 android:id="@+id/btn_share_recommendation"
-                android:layout_width="match_parent"
+                android:layout_width="220dp"
                 android:layout_height="70dp"
                 android:text="@string/btn_share_recommendation"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn_listen_on_spotify"
+                app:layout_constraintStart_toStartOf="@+id/btn_listen_on_spotify"
+                app:layout_constraintTop_toBottomOf="@+id/btn_listen_on_spotify" />
 
             <Button
                 android:id="@+id/btn_back"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="70dp"
-                android:text="Back to Recently Played Songs" />
-        </LinearLayout>
+                android:layout_marginTop="50dp"
+                android:text="@string/btn_back"
+                app:layout_constraintEnd_toEndOf="@+id/btn_share_recommendation"
+                app:layout_constraintStart_toStartOf="@+id/btn_share_recommendation"
+                app:layout_constraintTop_toBottomOf="@+id/btn_share_recommendation" />
+
+            <Button
+                android:id="@+id/btn_listen_on_spotify"
+                android:layout_width="220dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="32dp"
+                android:text="@string/btn_listen_on_spotify"
+                app:layout_constraintEnd_toEndOf="@+id/tv_artist_name"
+                app:layout_constraintStart_toStartOf="@+id/tv_artist_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_artist_name" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
