--- a/app/src/main/res/layout/activity_top_tracks_list_item.xml
+++ b/app/src/main/res/layout/activity_top_tracks_list_item.xml
@@ -3,39 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".RecentlyPlayedListItem">
+    android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tv_rp_title"
+        android:id="@+id/tv_top_title"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/tv_rp_title"
+        android:text="@string/tv_top_title"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Someone You Loved" />
+        tools:text="No Time To Die" />
 
     <TextView
-        android:id="@+id/tv_rp_artist"
+        android:id="@+id/tv_top_artists"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="@string/tv_rp_artist"
+        android:text="@string/tv_top_artists"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_rp_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_rp_title"
-        tools:text="Lewis Capaldi" />
+        app:layout_constraintStart_toStartOf="@+id/tv_top_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_top_title"
+        tools:text="Billie Eilish" />
 
     <Button
-        android:id="@+id/btn_discover"
+        android:id="@+id/btn_top_recommend"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="@string/btn_discover"
-        android:textSize="14sp"
+        android:text="@string/btn_top_recommend"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
